Cleared up the code a bit and added more games

--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
 				<button class="game" value="jogos/doom.swf">Classic Doom</button>
 				<button class="game" value="jogos/Doodle_God.swf">Doodle God</button>
 				<button class="game" value="jogos/escapingtheprison.swf">Escaping The Prison</button>
+				<button class="game" value="jogos/Dig to China - Unblocked Adventures.swf">Dig to China - Unblocked Adventures</button>
+				<button class="game" value="jogos/An Escape Series 2.5.swf">An Escape Series 2.5</button>
+				<button class="game" value="jogos/tangerine-tycoon.swf">Tangerine Tycoon</button>
+				<button class="game" value="jogos/An Escape Series 2.swf">An Escape Series 2</button>
 				</div>
 			</div>
 		</div>
@@ -92,6 +96,10 @@
 		<button class="game" value="jogos/doom.swf">Classic Doom</button>
 		<button class="game" value="jogos/Doodle_God.swf">Doodle God</button>
 		<button class="game" value="jogos/escapingtheprison.swf">Escaping The Prison</button>
+		<button class="game" value="jogos/Dig to China - Unblocked Adventures.swf">Dig to China - Unblocked Adventures</button>
+		<button class="game" value="jogos/An Escape Series 2.5.swf">An Escape Series 2.5</button>
+		<button class="game" value="jogos/tangerine-tycoon.swf">Tangerine Tycoon</button>
+		<button class="game" value="jogos/An Escape Series 2.swf">An Escape Series 2</button>
 
 		<script>
 		    $("button").click(function(){
